<resources>
    <string name="app_name">MenuMap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="result">Result</string>
    <string name="translate_text">Translate Text</string>
    <string name="translation">Translation</string>
    <string name="back_button">Button</string>
    <string name="back">BACK</string>
    <string name="take_picture">Take Picture</string>
    <string name="add">Add</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="target">target</string>
    <string name="source">source</string>
    <string name="source_">Select Source Language</string>
    <string name="target_">Select Target Language</string>
    <string name="select_source_language">Select Source Language</string>
    <string name="select_target_lanuguage">Select Target Lanuguage</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>Chinese</item>
        <item>French</item>
        <item>Dutch</item>
        <item>German</item>
        <item>Korean</item>
        <item>Japanese</item>
        <item>Russian</item>
    </string-array>
    <string name="server_client_id">http://930445243029-agaoneokk1rtanp2m4h022rdofugodp7.apps.googleusercontent.com</string>
</resources>
