<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity"
    android:background="#CCE5FF">

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/camera"
        android:padding="20sp"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autoSizeMaxTextSize="10sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/result" />
        android:padding="20sp"
        android:text="@string/result" />

    <Button
        android:id="@+id/translateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:padding="20sp"
        android:background="#62B2FF"
        android:text="@string/translate_text" />

    <TextView
        android:id="@+id/translateView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autoSizeMaxTextSize="10sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/translate_text" />
        android:padding="20sp"
        android:text="@string/translation" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="10sp">

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"
            android:background="#62B2FF"
            android:text="@string/back" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:onClick="onClick"
            android:background="#62B2FF"
            android:text="@string/add" />
    </RelativeLayout>

</LinearLayout>